Pull request #813: AG-51096: Fix settings styles
Merge in SCITER/adguard-mini from AG-51096-fix-styles to master

Squashed commit of the following:

commit ab2b58119f84135677e3f1926d8f5de6ca0c5a71
Merge: f4410b09 d42abcad
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Thu May 7 19:07:42 2026 +0300

    Merge branch 'master' into AG-51096-fix-styles

commit f4410b0924041a534767b5cace33ab8e5d2a0834
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Thu May 7 10:10:47 2026 +0300

    AG-51096: Fix settings styles

--- a/AdguardMini/sciter-ui/modules/settings/components/ContextMenu/ContextMenu.module.pcss
+++ b/AdguardMini/sciter-ui/modules/settings/components/ContextMenu/ContextMenu.module.pcss
@@ -12,7 +12,7 @@
     &_context {
         z-index: var(--zi-tooltip);
         position: absolute;
-        width: max-content;
+        width: 240px;
         border-radius: var(--border-radius);
         background-color: var(--fills-backgrounds-page-background-default);
         right: 0px;
@@ -22,6 +22,7 @@
 
         &__tooltip {
             background-color: var(--fills-menus-dropdown-menu-background-default);
+            width: max-content;
 
             .ContextMenu_action:hover {
                 background: inherit;
